# Fast_Data_Recovery

./: .gitignore  FastDataRecovery.ps1  FastDataRecovery.sh  README.md  build_exe.ps1  gui_dashboard.py  pyproject.toml  requirements.txt
src/recoverypro/: carver.py  cli.py
src/recoverypro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_carver_smoke.py
